--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/aws-sdk": "^2.7.0",
     "@types/formidable": "^3.4.5",
     "aws-sdk": "^2.1575.0",
+    "discord.js": "^14.14.1",
     "formidable": "^3.5.1",
     "next": "14.1.3",
     "react": "^18",
